add the portal links

--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
         <i class="mobile-nav-toggle d-xl-none bi bi-list"></i>
       </nav>
 
-      <a class="cta-btn d-none d-sm-block" href="./pages/registration/index.html">Register now</a>
+      <a class="cta-btn d-none d-sm-block" href="https://portal.apsc2026.lk/registration">Register now</a>
 
     </div>
   </header>
@@ -116,14 +116,15 @@
       <div class="container d-flex flex-column align-items-center text-center mt-auto">
         <h2 data-aos="fade-up" data-aos-delay="100" class="">THE ASIA PACIFIC<br>STROKE CONFERENCE <span>2026</span>
         </h2>
-        <p data-aos="fade-up" data-aos-delay="200">26-28 November 2026, Colombo, Sri Lanka</p>
+        <p data-aos="fade-up" data-aos-delay="200" class="hero-save-label">Save the date</p>
+        <p data-aos="fade-up" data-aos-delay="200" class="hero-save-date">26-28 November 2026</p>
         <!-- <div data-aos="fade-up" data-aos-delay="300" class="">
           <a href="https://www.youtube.com/watch?v=Y7f98aduVJ8" class="glightbox pulsating-play-btn mt-3"></a>
         </div> -->
         <div class="hero-buttons d-flex flex-wrap justify-content-center gap-3 mt-4" data-aos="fade-up"
           data-aos-delay="300">
-          <a href="./pages/registration/index.html" class="btn-hero btn-register">Register Now</a>
-          <a href="./pages/abstract/abstracts.html" class="btn-hero btn-abstract">Submit Abstract</a>
+          <a href="https://portal.apsc2026.lk/registration" class="btn-hero btn-register">Register Now</a>
+          <a href="https://portal.apsc2026.lk" class="btn-hero btn-abstract">Submit Abstract</a>
         </div>
       </div>
 
@@ -157,7 +158,7 @@
       <div class="modal-dialog modal-lg modal-dialog-centered">
         <div class="modal-content">
           <div class="modal-header border-0">
-            <h5 class="modal-title fw-bold" id="presidentModalLabel">Message from the President NSASL</h5>
+            <h5 class="modal-title fw-bold" id="presidentModalLabel">Message from the President of NSASL</h5>
             <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
           </div>
           <div class="modal-body p-4">
@@ -171,53 +172,63 @@
             </div>
 
             <p class="president-text">
-              It is a privilege to invite you to the <strong>Asia Pacific Stroke Conference (APSC) 2026</strong>, which
-              will be held
-              <strong>26–28 November 2026</strong> in the vibrant city of <strong>Colombo, Sri Lanka</strong>.<br><br>
+              It is a great privilege and honour to host the <strong>Asia Pacific Stroke Conference (APSC)
+                2026</strong>, scheduled
+              to take place from <strong>26th to 28th November 2026</strong> at <strong>Block 2 of the Bandaranaike
+                Memorial International Conference Hall (BMICH)</strong>
+              in the vibrant city of <strong>Colombo, Sri Lanka</strong>.<br><br>
 
-              Our theme—<em>“Enhancing Stroke Management: Overcoming Challenges and Fostering Regional
-                Synergies”</em>—captures
-              our shared goal of advancing stroke care across the Asia–Pacific region. We aim to bring together leading
-              international and regional experts to present the latest scientific developments and to explore strategies
-              tailored to the diverse needs of our community.<br><br>
+              The conference theme, <em>“Enhancing Stroke Management: Overcoming Challenges and Fostering Regional
+                Synergies,”</em>
+              reflects our shared commitment to advancing stroke care across the Asia–Pacific region. APSC 2026 will
+              bring together
+              leading international and regional experts to present the latest scientific developments and to explore
+              innovative,
+              context-specific strategies addressing the diverse needs of our communities.<br><br>
 
-              Often celebrated as the <strong>“Pearl of the Indian Ocean,”</strong> Sri Lanka offers an inspiring
+              Often celebrated as the <strong>“Pearl of the Indian Ocean,”</strong> Sri Lanka provides an inspiring
               setting for this
-              gathering. Colombo blends modern facilities with centuries of culture and heritage. From the capital, you
-              can
-              easily reach the ancient cities of <strong>Sigiriya</strong> and <strong>Anuradhapura</strong>, the
-              mist-covered tea
-              country of <strong>Nuwara Eliya</strong>, or the island’s golden beaches. November is one of the best
-              times to
-              visit—tropical yet pleasantly mild—making it ideal for both professional engagement and personal
-              exploration.<br><br>
+              important gathering. The island seamlessly blends modern infrastructure with centuries of rich culture and
+              heritage.
+              From Colombo, delegates can easily explore iconic destinations such as the ancient cities of
+              <strong>Sigiriya</strong>
+              and <strong>Anuradhapura</strong>, the mist-covered tea plantations of <strong>Nuwara Eliya</strong>, or
+              the country’s
+              renowned golden beaches. November is one of the most pleasant times to visit Sri Lanka, offering a
+              tropical yet
+              comfortable climate ideal for both professional engagement and leisure.<br><br>
 
-              APSC 2026 is organized by the <strong>National Stroke Association of Sri Lanka (NSASL)</strong> in
-              collaboration
-              with the <strong>Asia Pacific Stroke Organization (APSO)</strong> and our regional partners. We are
-              grateful for
-              APSO’s guidance and for the commitment of our organizing committee, who are shaping a program of strong
-              scientific
-              content and practical relevance.<br><br>
+              APSC 2026 is the annual regional meeting of the <strong>Asia Pacific Stroke Organisation (APSO)</strong>
+              and will be
+              hosted in Colombo by the <strong>National Stroke Association of Sri Lanka (NSASL)</strong>. We are deeply
+              grateful to
+              APSO for entrusting Sri Lanka with this prestigious meeting, and for its continued guidance, support, and
+              commitment in
+              organising this landmark event.<br><br>
 
-              This will be an entirely <strong>in-person meeting</strong>, designed to encourage face-to-face exchange
-              and networking.
-              The program will feature plenary lectures, focused symposia, and interactive workshops, providing ample
-              opportunity to learn from world-class faculty and to share ideas with colleagues across the
-              region.<br><br>
+              This conference will be conducted as a fully <strong>in-person meeting</strong>, designed to promote
+              meaningful
+              face-to-face interactions and networking. The scientific programme will feature plenary lectures, focused
+              symposia, and
+              interactive workshops, offering participants valuable opportunities to learn from world-class faculty and
+              to exchange
+              ideas with colleagues from across the region.<br><br>
 
               Colombo is easily accessible via <strong>Bandaranaike International Airport</strong>, with convenient
-              transport links
-              to the city and to the conference venue. A wide choice of hotels, restaurants, and cultural attractions
-              will ensure
-              a comfortable and memorable stay for every delegate.<br><br>
+              transport links to
+              the city and the conference venue. A wide range of hotels, dining options, and cultural attractions will
+              ensure a
+              comfortable and memorable stay for all delegates.<br><br>
 
-              Our team is committed to making APSC 2026 both a landmark scientific event and a warm introduction to
-              <strong>Sri Lankan hospitality</strong>. We look forward to welcoming you for three days of learning,
+              Our organising team is committed to delivering APSC 2026 as both a landmark scientific event and a warm
+              introduction to
+              <strong>Sri Lankan hospitality</strong>. We look forward to welcoming you to Colombo for three days of
+              learning,
               collaboration, and friendship.<br><br>
 
               Discover Sri Lanka—where ancient heritage meets modern medicine.
             </p>
+
           </div>
         </div>
       </div>
@@ -276,8 +287,8 @@
     <!-- Key Information / Quick Facts Section -->
     <section id="key-info" class="key-info section">
       <div class="container section-title" data-aos="fade-up">
-        <h2>Key Information</h2>
-        <p>Quick facts about APSC 2026</p>
+        <h2>Quick facts about APSC 2026</h2>
+        <!-- <p>Quick facts about APSC 2026</p> -->
       </div>
 
       <div class="container" data-aos="fade-up" data-aos-delay="100">
@@ -289,8 +300,8 @@
               <div class="icon mb-3">
                 <i class="bi bi-calendar-check"></i>
               </div>
-              <h4>Date & Venue</h4>
-              <p>26–28 November 2026<br>Cinnamon Grand, Colombo, Sri Lanka</p>
+              <h4>Program at a glance</h4>
+              <p>26–28 November 2026<br>BMICH, Colombo, Sri Lanka</p>
               <a href="#venue" class="read-more">More <i class="bi bi-arrow-right"></i></a>
             </div>
           </div>
@@ -301,7 +312,7 @@
               <div class="icon mb-3">
                 <i class="bi bi-person-badge"></i>
               </div>
-              <h4>Registration Info</h4>
+              <h4>Registration Information</h4>
               <p>Early Bird, Regular, Late & Onsite registration categories available.</p>
               <a href="registration-guidelines.html" class="read-more">More <i class="bi bi-arrow-right"></i></a>
             </div>
@@ -313,21 +324,69 @@
               <div class="icon mb-3">
                 <i class="bi bi-file-earmark-text"></i>
               </div>
-              <h4>Abstract Submission</h4>
+              <h4>Abstract Information</h4>
               <p>Submit your abstract before the deadline to share your research at APSC 2026.</p>
               <a href="abstract-guidelines.html" class="read-more">More<i class="bi bi-arrow-right"></i></a>
             </div>
           </div>
 
-          <!-- Contact -->
+          <!-- Explore Sri Lanka -->
           <div class="col-md-6 col-lg-3">
             <div class="info-card text-center">
               <div class="icon mb-3">
-                <i class="bi bi-envelope"></i>
+                <i class="bi bi-geo-alt"></i>
               </div>
-              <h4>Contact</h4>
-              <p>Email: apsc2026.secretariat@gmail.com<br></p>
-              <a href="#contact" class="read-more">More <i class="bi bi-arrow-right"></i></a>
+              <h4>Explore Sri Lanka</h4>
+              <p>Plan your trip, discover destinations, and travel tips for Sri Lanka.</p>
+              <a href="https://www.sltda.gov.lk/en" class="read-more" target="_blank" rel="noopener noreferrer">
+                Visit <i class="bi bi-arrow-right"></i>
+              </a>
+            </div>
+          </div>
+
+
+        </div>
+      </div>
+    </section>
+
+    <!-- Presidents Section -->
+    <section id="messages" class="messages section light-background">
+      <div class="container section-title" data-aos="fade-up">
+        <h2>President's Messages</h2>
+        <p>Welcome messages from the Presidents</p>
+      </div>
+
+      <div class="container" data-aos="fade-up" data-aos-delay="100">
+        <div class="row gy-4">
+
+          <!-- President Message -->
+          <div class="col-lg-6">
+            <div class="message-card d-flex flex-column align-items-center text-center p-4">
+              <img src="assets/img/president.jpg" alt="President" class="img-fluid rounded-circle mb-3 message-img">
+              <h4 class="fw-bold mb-1">Dr. Gamini Pathirana</h4>
+              <p class="position mb-3">President, National Stroke Association of Sri Lanka (NSASL) <br> Chair, Asia
+                Pacific Stroke Conference 2026</p>
+              <p class="message-text">
+                It is a privilege to invite you to the Asia Pacific Stroke Conference (APSC) 2026, which will be held
+                26–28 November 2026 in the vibrant city of Colombo, Sri Lanka...
+              </p>
+              <a href="#" class="btn-read-more" data-bs-toggle="modal" data-bs-target="#presidentModal">Read More</a>
+            </div>
+          </div>
+
+          <!-- Vice President Message -->
+          <div class="col-lg-6">
+            <div class="message-card d-flex flex-column align-items-center text-center p-4">
+              <img src="assets/img/president2.jpg" alt="Vice President"
+                class="img-fluid rounded-circle mb-3 message-img">
+              <h4 class="fw-bold mb-1">Prof. Nijasri C. Suwanwela, M.D</h4>
+              <p class="position mb-3">President, Asia Pacific Stroke Organisation (APSO) <br> .</p>
+              <p class="message-text">
+                On behalf of the Asia Pacific Stroke Organisation (APSO), it is my great pleasure to invite you to the
+                Asia
+                Pacific Stroke Conference (APSC) 2026, to be held in Colombo, Sri Lanka...
+              </p>
+              <a href="#" class="btn-read-more" data-bs-toggle="modal" data-bs-target="#vpModal">Read More</a>
             </div>
           </div>
 
@@ -1139,51 +1198,6 @@
 
     </section> -->
     <!-- /Buy Tickets Section -->
-
-    <!-- Presidents Section -->
-    <section id="messages" class="messages section light-background">
-      <div class="container section-title" data-aos="fade-up">
-        <h2>President's Messages</h2>
-        <p>Welcome messages from the Presidents</p>
-      </div>
-
-      <div class="container" data-aos="fade-up" data-aos-delay="100">
-        <div class="row gy-4">
-
-          <!-- President Message -->
-          <div class="col-lg-6">
-            <div class="message-card d-flex flex-column align-items-center text-center p-4">
-              <img src="assets/img/president.jpg" alt="President" class="img-fluid rounded-circle mb-3 message-img">
-              <h4 class="fw-bold mb-1">Dr. Gamini Pathirana</h4>
-              <p class="position mb-3">President, National Stroke Association of Sri Lanka (NSASL) <br> Chair, Asia
-                Pacific Stroke Conference 2026</p>
-              <p class="message-text">
-                It is a privilege to invite you to the Asia Pacific Stroke Conference (APSC) 2026, which will be held
-                26–28 November 2026 in the vibrant city of Colombo, Sri Lanka...
-              </p>
-              <a href="#" class="btn-read-more" data-bs-toggle="modal" data-bs-target="#presidentModal">Read More</a>
-            </div>
-          </div>
-
-          <!-- Vice President Message -->
-          <div class="col-lg-6">
-            <div class="message-card d-flex flex-column align-items-center text-center p-4">
-              <img src="assets/img/president2.jpg" alt="Vice President"
-                class="img-fluid rounded-circle mb-3 message-img">
-              <h4 class="fw-bold mb-1">Prof. Nijasri C. Suwanwela, M.D</h4>
-              <p class="position mb-3">President, Asia Pacific Stroke Organisation (APSO) <br> .</p>
-              <p class="message-text">
-                On behalf of the Asia Pacific Stroke Organisation (APSO), it is my great pleasure to invite you to the
-                Asia
-                Pacific Stroke Conference (APSC) 2026, to be held in Colombo, Sri Lanka...
-              </p>
-              <a href="#" class="btn-read-more" data-bs-toggle="modal" data-bs-target="#vpModal">Read More</a>
-            </div>
-          </div>
-
-        </div>
-      </div>
-    </section>
 
     <!-- Contact Section -->
     <section id="contact" class="contact section">
