--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -52,7 +52,7 @@
                 <i class="mobile-nav-toggle d-xl-none bi bi-list"></i>
             </nav>
 
-            <a class="cta-btn d-none d-sm-block" href="index.html#buy-tickets">Register now</a>
+            <a class="cta-btn d-none d-sm-block" href="https://portal.apsc2026.lk/registration">Register now</a>
 
         </div>
     </header>
