update url openings to open in a new tab

--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
         <i class="mobile-nav-toggle d-xl-none bi bi-list"></i>
       </nav>
 
-      <a class="cta-btn d-none d-sm-block" href="https://portal.apsc2026.lk/registration">Register now</a>
+      <a class="cta-btn d-none d-sm-block" href="https://portal.apsc2026.lk/registration" target="_blank">Register now</a>
 
     </div>
   </header>
@@ -124,7 +124,7 @@
         <div class="hero-buttons d-flex flex-wrap justify-content-center gap-3 mt-4" data-aos="fade-up"
           data-aos-delay="300">
           <a href="https://portal.apsc2026.lk/registration" class="btn-hero btn-register">Register Now</a>
-          <a href="https://portal.apsc2026.lk" class="btn-hero btn-abstract">Submit Abstract</a>
+          <a href="https://portal.apsc2026.lk" class="btn-hero btn-abstract" target="_blank">Submit Abstract</a>
         </div>
       </div>
 
