update register url

--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
         </div> -->
         <div class="hero-buttons d-flex flex-wrap justify-content-center gap-3 mt-4" data-aos="fade-up"
           data-aos-delay="300">
-          <a href="https://portal.apsc2026.lk/registration" class="btn-hero btn-register">Register Now</a>
+          <a href="https://portal.apsc2026.lk/registration" class="btn-hero btn-register" target="_blank">Register Now</a>
           <a href="https://portal.apsc2026.lk" class="btn-hero btn-abstract" target="_blank">Submit Abstract</a>
         </div>
       </div>
